# golem-schema-lift

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  recursive.rs
core/tests/: agent.rs
macros/: Cargo.toml
macros/src/: lib.rs  non_recursive.rs
